# boop-rs

./: Cargo.toml  NOTES.md  README.md  TODO.md  report.html  report.json  test.json
.github/workflows/: release.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: list_plugins.rs  mod.rs  run.rs
core/: Cargo.toml  report.json
core/src/: lib.rs  manager.rs  plugin.rs  plugin_manager.rs
core/src/default_plugins/: base64.rs  json.rs  jwt.rs  md5.rs  mod.rs  text.rs  url.rs
core/src/loaders/: js.rs  js_loader.rs  mod.rs
core/src/plugins/: base64.rs  html.rs  js_plugin.rs  json.rs  jwt.rs  md5.rs  mod.rs  text.rs  url.rs
gui/: Cargo.toml  report.json
gui/src/: app.rs  main.rs  syntax_highlighting.rs
gui/src/views/: editor.rs  mod.rs  palette.rs  settings.rs
plugins/: hex2rgb.js  newlines.js  rgb2hex.js
src/: editor.rs  main.rs  plugin.rs
