[package]
name = "boop"
version = "0.2.0"
edition = "2021"
publish = false

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core", default_features = true }
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
