[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default_plugins", "default_loaders"]

default_plugins = ["plugin_base64"]
plugin_base64 = ["dep:base64"]

default_loaders = ["js_loader"]
js_loader = ["dep:boa_engine"]

[dependencies]
cfg-if = "1.0.0"
boa_engine = { version = "0.16.0", optional = true }
base64 = { version = "0.20.0", optional = true }
