[package]
name = "boop_gui"
version = "0.1.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }

eframe = "0.20.0"
egui_extras = "0.20.0"
enum-map = { version = "2", features = ["serde"] }
